--- a/.env.sample
+++ b/.env.sample
@@ -1,1 +1,9 @@
 DJANGO_SECRET_KEY="key"
+GEMINI_SECRET_KEY="key"
+POSTGRES_PASSWORD=social_service
+POSTGRES_USER=social_service
+POSTGRES_DB=social_service
+POSTGRES_HOST=postgres
+POSTGRES_PORT=5432
+PGDATA=/var/lib/postgresql/data
+CELERY_REDIS_BROKER_URL="redis://redis:6379/0"
