--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,8 @@ services:
   redis:
     image: redis:7.4.0-alpine3.20
     restart: always
+    ports:
+      - "6379:6379"
 
   celery:
     build:
