--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
       context: .
     env_file:
       - .env
+    environment:
+      - IS_DOCKER=true
     ports:
       - "8000:8000"
     volumes:
