--- a/.env.sample
+++ b/.env.sample
@@ -7,3 +7,4 @@ POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
 PGDATA=/var/lib/postgresql/data
 CELERY_REDIS_BROKER_URL="redis://redis:6379/0"
+USE_DOCKER=True
