Updated to properly set env variable for the tests

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,7 +25,7 @@ jobs:
           pip install -r requirements.txt
 
       - name: Set up .env file
-        run: echo "SECRET_KEY=GITHUB_ACTIONS_UNSAFE_KEY" > .env
+        run: echo 'DJANGO_SECRET_KEY="GITHUB_ACTIONS_UNSAFE_KEY"' > .env
 
       - name: Run flake8
         run: flake8
